	methods expectedValue() and actualValue().

	* include/cppunit/TestAssert.h:
	* src/cppunit/TestAssert.cpp:
	Use NotEqualException to report equality failure.

	* src/cppunit/TestResult.cpp:
	Report expect/was on different line for assertEquals failure.

	* examples/cppunittest/NotEqualExceptionTest.*: added unit tests for
	NotEqualException. 

2001-06-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* examples/cppunittest/TestResultTest.cpp (testAddTwoErrors,
	testAddTwoFailures): Replace vector::at() with more portable
	vector::operator[]; GCC doesn't have the former.

	* include/cppunit/extensions/TestDecorator.h (countTestCases):
	Declare return type.

	* src/cppunit/Makefile.am (libcppunit_la_SOURCES): Add
	TestAssert.cpp, RepeatedTest.cpp.

	* include/cppunit/TestCaller.h (NoExceptionExpected): Fix
	constructor name.

2001-06-11 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunit/Exception.h: now inherit from std::exception
	instead of ::exception. Added clone(), type(), and isInstanceOf()
	methods for subclassing support. Changed UNKNOWNLINENUMBER type to
	long for consistence with lineNumber().

	* include/cppunit/NotEqualException.h: addded, exception to be
	used with assertEquals().

	* include/cppunit/TestAssert.h: changed TestAssert into a
	namespace instead of a class. This remove the need of template
	member methods and does not cause compiler internal error on
	VC++. Macro CPPUNIT_ASSERT_MESSAGE has been added to fail test
	with a specified message.

	* include/cppunit/TestCaller.h: added "Expected exception"
	support.  Based on Tim Jansen patch (#403745), but use a traits
	instead of RTTI to distingh between "No expected exception" and
	"Excepted exception".  Exception type name is reported using RTTI
	if CPPUNIT_USE_TYPEINFO is defined.

	* include/cppunit/extensions/HelperMacros.h: static method suite()
	implemented by CPPUNIT_TEST_SUITE_END macro now returns a
	TestSuite instead of a Test.
