@@ -15,6 +15,8 @@
 	* examples/cppunittest/NotEqualExceptionTest.*: added unit tests for
 	NotEqualException. 
 
+	* examples/cppunittest/OrthodoxTest.*: operator ! use explicit construction.
+
 2001-06-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* examples/cppunittest/TestResultTest.cpp (testAddTwoErrors,
